# agent-ops

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
.agent/: config.yaml
.github/workflows/: ci.yml  groom-pipeline.yml  promote-pipeline.yml  test-call.yml  test-callee.yml  triage-pipeline.yml  triage.yml
config/: board.example.yml  defaults.yaml  fleet.example.md  repos.example.yml  repos.yml
docs/: architecture.md  ci-cd.md  guide.md  office-ops.md  roadmap.md  workflow.md
docs/adr/: 0001-python-uv-for-the-platform.md  0002-shell-out-to-runtime-clis.md  0003-state-in-github-gates-as-evaluator.md
prompts/: orchestrator.md
prompts/agents/: implementer.md  planner.md  reviewer.md  tester.md
prompts/tasks/: groom.md  implement.md  plan.md  review.md  scout.md  spec.md  triage.md
scripts/: set-claude-token.sh
skills/: coding.md  documentation.md  review.md  testing.md
src/agent_ops/: __init__.py  board.py  cli.py  config.py  gates.py  github.py  loop.py  orca.py  prompts.py  registry.py  skills.py  status.py  surfaces.py  utils.py  worktree.py
stubs/: managed-repo-groom.yml  managed-repo-project-sync.yml  managed-repo-promote.yml  managed-repo-triage.yml
templates/project/: AGENTS.md  config.yaml  (+1 more)
tests/: test_board.py  test_claude_runtime.py  test_cli_dispatch.py  test_cli_init.py  test_config.py  test_gates.py  test_groom.py  test_implement_workflow.py  test_loop.py  test_merge_rules.py  test_orca.py  test_prompts.py  test_registry.py  test_scout.py  test_status.py  test_surfaces.py  test_triage.py  test_worktree.py
(+13 files in other folders)
