[project]
name = "agent-ops"
version = "0.1.0"
description = "Reusable agentic SDLC platform: CLI orchestrator, runtime abstraction, worktree-isolated workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
agent = "agent_ops.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1.380",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_ops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
